--- a/data/nlu/campus_card.yml
+++ b/data/nlu/campus_card.yml
@@ -150,6 +150,12 @@ nlu:
     - 怎么挂失校园卡？
     - 挂失校卡
     - 解挂校卡
+- intent: 校园卡/领取微信校园卡
+  examples: |
+    - 领取微信校园卡
+    - 怎么领取微信校园卡
+    - 微信校园卡怎么领
+
 - intent: 校园卡/其他
   examples: |
     - 校园卡和通用代扣账户
