--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -1,7 +1,7 @@
 version: "2.0"
 nlu:
 
-  - intent: 火车票优惠/资质绑定
+  - intent: 后勤服务/火车票优惠_资质绑定
     examples: |
       - 什么是资质绑定？
       - 什么是资质绑定
@@ -11,7 +11,7 @@ nlu:
       - 资质绑定是啥？
       - 资质绑定是啥。
 
-  - intent: 火车票优惠/补齐公章
+  - intent: 后勤服务/火车票优惠_补齐公章
     examples: |
       - 乘车前一定要补齐“注册章”和“深圳大学公章”，请问需要怎么补办？
       - 怎么补办乘车需要的公章？
@@ -20,7 +20,7 @@ nlu:
       - 乘车所需公章如何补齐？
       - 乘车所需公章如何补齐
 
-  - intent: 火车票优惠/如何绑定学生资质
+  - intent: 后勤服务/火车票优惠_如何绑定学生资质
     examples: |
       - 如何绑定学生资质？
       - 如何绑定学生资质
@@ -30,7 +30,7 @@ nlu:
       - 怎么绑定学生资质？
       - 如何绑定学生资质。
 
-  - intent: 火车票优惠/学生证充磁
+  - intent: 后勤服务/火车票优惠_学生证充磁
     examples: |
       - 学生证优惠卡一定需要充磁吗？
       - 学生证优惠卡怎么充磁？
@@ -47,7 +47,7 @@ nlu:
       - 火车票优惠卡现在可以充值吗？
       - 火车票优惠卡现在可以充磁吗？
 
-  - intent: 火车票优惠/身份证未核验
+  - intent: 后勤服务/火车票优惠_身份证未核验
     examples: |
       - 购买的是电子客票，可凭身份证进站。可是为什么进站刷身份证时，提示“身份证未核验”，不能通过闸机？
       - 进站刷身份证时，提示“身份证未核验”，不能通过闸机
@@ -57,7 +57,7 @@ nlu:
       - 怎么核验身份？
       - 怎么核验身份
 
-  - intent: 火车票优惠/取车票
+  - intent: 后勤服务/火车票优惠_取车票
     examples: |
       - 电子客票在车站自助售取票机上取票时为什么不点“互联网取票”而是要点“取报销凭证”才能取出车票？
       - 点“互联网取票”取不了票
@@ -65,7 +65,7 @@ nlu:
       - 点“互联网取票”取不出票？
       - 自助售取票机上取不了学生票
 
-  - intent: 火车票优惠/无法取票或绑定资质
+  - intent: 后勤服务/火车票优惠_无法取票或绑定资质
     examples: |
       - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办？
       - 去车站取票时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
@@ -73,7 +73,7 @@ nlu:
       - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办
       - 去车站绑定资质时提示“学生证没有绑定身份信息或没有身份证号码”怎么办。
 
-  - intent: 火车票优惠/查询学生资质绑定
+  - intent: 后勤服务/火车票优惠_查询学生资质绑定
     examples: |
       - 如何查询学生资质绑定成功？
       - 在哪查询资质绑定信息？
@@ -84,9 +84,72 @@ nlu:
       - 查不到火车票学生资质
       - 查不到火车票学生资质怎么办
       - 查不到火车票学生资质？
+      
+  - intent: 后勤服务/谁可以使用心理咨询
+    examples: |
+      - 谁可以来使用心理咨询服务？
+      - 谁可以使用心理咨询服务？
+      - 谁可以使用心理咨询服务
+      - 我能去心理咨询吗
+      - 谁能使用心理咨询服务？
+      - 谁能使用心理咨询服务
+      - 谁可以去心理咨询
+      - 谁可以去心理咨询？
+      - 谁可以去心理咨询。
+
+  - intent: 后勤服务/心理咨询方式
+    examples: |
+      - 有哪些咨询方式？
+      - 咨询方式有哪些？
+      - 都有哪些咨询方式？
+      - 有哪些咨询方式？
+      - 心理咨询都有哪些方式？
+      - 心理咨询有什么方式？
+      - 心理咨询都有啥
+      - 心理咨询都有啥？
+
+  - intent: 后勤服务/心理咨询隐私保护
+    examples: |
+      - 我来求助，我的同学老师会知道吗？
+      - 我身边的人会知道我来心理咨询吗？
+      - 我周围的人会知道我来做心理咨询吗？
+      - 我周围的人知道我来咨询心理吗？
+      - 我周围的人会知道我来咨询吗？
+      - 周围人会知道我来做心理咨询吗
+
+  - intent: 后勤服务/心理咨询作用
+    examples: |
+      - 心理咨询有用吗？
+      - 心理咨询有用吗。
+      - 心理咨询有啥用
+      - 心理咨询有啥用？
+      - 心理咨询有什么用？
+      - 心理咨询有什么用
+      - 心理咨询能做什么？
+
+  - intent: 后勤服务/心理咨询地址
+    examples: |
+      - 心理咨询中心在哪？
+      - 心理咨询中心在哪
+      - 心理咨询中心在哪。
+      - 咨询中心在哪？
+      - 咨询中心在哪。
+      - 咨询中心在哪
+      - 心理咨询中心在哪里。
+      - 咨询中心在哪儿
+      - 咨询中心在哪儿？
+
+  - intent: 后勤服务/心理咨询预约方式
+    examples: |
+      - 心理咨询怎么预约？
+      - 如何预约心理咨询？
+      - 怎么预约心理咨询？
+      - 怎么看心理咨询
+      - 怎么看心理咨询？
+      - 怎么样预约心理咨询
 
 
-  - intent: 火车票优惠/其他
+  - intent: 后勤服务/其他
     examples: |
       - 与火车票优惠卡有关的疑问可以向谁询问吗？
       - 有关火车票优惠卡的疑问可以问谁？
@@ -116,6 +179,8 @@ nlu:
       - 火车票优惠卡1月11号还可以补办吗？
       - 学活现在可以取火车票吗（不是高铁票）
       - 请问火车票学生优惠卡在丽湖校区哪里办理？
+      - 心理咨询相关问题都有什么？
+      - 心理咨询相关问题
 
 
   - synonym: 如何
