--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -1,76 +1,84 @@
 version: "2.0"
 responses:
 
-  utter_选课问题/加位:
+  utter_教学教务/加位:
     - text: "学生若需申请加位，请在选课期间将加位申请向开课学院教学秘书邮箱反映，如果可以增加课容量，秘书会在系统中增加，课容量释放后，学生按照正常选课的规则在系统中选课即可。校内MOOC要增加学位，学生可透过已公布的各学院教学秘书的邮箱向开课学院申请增加位；如果是公选课，建议学生优先考虑选课不满的MOOC；校外MOOC请咨询教务部mooc办车老师442469154@qq.com。"
 
-  utter_选课问题/预选课:
+  utter_教学教务/预选课:
     - text: "本学期选课预选阶段已有选课结果的课程维持，预选阶段的选课可以在确认阶段退课。"
 
-  utter_选课问题/切换选课校区:
+  utter_教学教务/切换选课校区:
     - text: "进入系统后，选课页面右侧栏点击人像图标（弹出的侧边栏中点击切换校区按钮）。"
 
-  utter_选课问题/登录选课系统:
-    - text: "1.登录的用户名为学号，登录密码为深大统一身份认证的密码，初始密码为身份证后八位。 2.如果忘记了密码，请您前往ehall.szu.edu.cn，点击“登录”，在登录页上有“找回密码”的功能，找回密码后就可以登录选课系统了。 如果以上方式还无法解决问题，请前往ehall.szu.edu.cn，点击“登录”，点击“不知道密码？请点击《使用说明》”需求帮助。"
+  utter_教学教务/登录选课系统:
+    - text: "[点击进入本科生选课系统](http://bkxk.szu.edu.cn/xsxkapp/sys/xsxkapp/*default/index.do)\n
+    [点击进入研究生选课系统](http://ehall.szu.edu.cn/yjsxkapp/sys/xsxkapp/*default/index.do)\n
+    温馨提示：\n
+    1. 登录的用户名为学号，登录密码为深大统一身份认证的密码，初始密码为身份证后八位。\n
+    2. 如果忘记了密码，请您前往ehall.szu.edu.cn，点击“登录”，在登录页上有“找回密码”的功能，找回密码后就可以登录选课系统了。 \n
+    如果以上方式还无法解决问题，请前往ehall.szu.edu.cn，点击“登录”，点击“不知道密码？请点击《使用说明》”需求帮助。"
 
-  utter_选课问题/网上补交学分费:
+  utter_教学教务/网上补交学分费:
     - text: "路径：深大内部网/办事大厅/缴学杂费 1、选择缴费学期号，确认缴费信息；2、生成缴费通知书单。注意：缴费通知书号是缴费的唯一凭证，以下的两种缴费方式都必须用到缴费通知书号： 网银：学生须开通网银才能缴费，目前已支持20多家银行网银，把缴费通知书号输入到指定位置。 柜台：学生凭缴费通知书单可到中国、工商、平安、建设、招商银行的任意一个营业网点缴费。 计划财务部联系电话：26536167"
 
-  utter_选课问题/不能进入选课系统:
-    - text: "登录时，如果系统提示“抱歉，未评教、欠费、休学无法选课！”，那么您将无法进入选课系统。对于可能的问题解决方法如下： 1、未评教：根据学校的要求，评教是选课的前提条件。请先前往ehall.szu.edu.cn，登录后进行教学评测，完成评测1小时后，您就可以登录选课了。 2、欠费：请先结清费用，1小时后系统将会同步。 3、休学：请咨询联系教务处，或前往学籍大厅咨询办理。"
+  utter_教学教务/不能进入选课系统:
+    - text: "登录时，如果系统提示“抱歉，未评教、欠费、休学无法选课！”，那么您将无法进入选课系统。对于可能的问题解决方法如下： \n
+    1. 未评教：根据学校的要求，评教是选课的前提条件。请先前往ehall.szu.edu.cn，登录后进行教学评测，完成评测1小时后，您就可以登录选课了。 \n
+    2. 欠费：请先结清费用，1小时后系统将会同步。\n
+    3. 休学：请咨询联系教务处，或前往学籍大厅咨询办理。"
 
-  utter_选课问题/其他:
-    - text: "暂时不能回答该选课问题。"
+  utter_教学教务/缴学杂费:
+    - text: "[点击查看应缴款项](https://cwxssf.szu.edu.cn/wsyh)"
 
-  utter_火车票优惠/资质绑定:
+  utter_教学教务/其他:
+    - text: "暂时不能回答该教学教务问题。"
+
+  utter_后勤服务/火车票优惠_资质绑定:
     - text: "资质绑定是指学生出具自己的学生证、身份证、优惠卡，学生在车站自助售取票机或车站窗口办理的一次学生身份核验，以核实学生身份的真实性和购票优惠资格的有效性（包括是否在读）。每学年的10月1日至下学年的9月30日为一个优惠年度，一个优惠年度内，学生只能购买4次学生优惠票，每个优惠年度内必须进行一次资质绑定（以证明仍然在读），之后才能享受电子客票服务（刷身份证进出站）。"
 
-  utter_火车票优惠/补齐公章:
+  utter_后勤服务/火车票优惠_补齐公章:
     - text: "同学可先翻阅学生证查看是否需要补齐公章。如在“注册栏”页面缺少“注册章”，同学需要前往学院院办补盖；如在学生证信息页（有照片的页面）与学生票信息页（写明乘车区间信息页面）缺少“深圳大学公章”，粤海校区的同学可前往学生事务服务中心3号窗口补办，丽湖校区的同学可前往综合服务大厅2号窗口补办。"
 
-  utter_火车票优惠/如何绑定学生资质:
+  utter_后勤服务/火车票优惠_如何绑定学生资质:
     - text: "仍有资质绑定需要的同学可自行进行。资质绑定有三种方式：（1）学生未绑定资质前可以先在网上购票，但乘车前需到车站自助售取票机或车站窗口换票（读取身份证、优惠卡信息换票成功后自动完成优惠资质绑定，“取报销凭证”服务位于自动售票机左下方窗口链接）；注意：换票是指打印出报销凭证，学生打印报销凭证的目的是让先买票的学生能绑定资质，然后刷身份证进出站。）（2）学生提前到车站进行资质绑定，之后再网上购票（备注：“学生优惠资质绑定”服务位于自动售票机右上方窗口链接）。（3）学生直接到车站窗口或自动售票机购票（购票时完成优惠资质绑定）。"
 
-  utter_火车票优惠/学生证充磁:
+  utter_后勤服务/火车票优惠_学生证充磁:
     - text: "在每一优惠年度结束后，系统会自动将优惠购票次数更新为“4”，学生即可凭此购买4次学生优惠票。若同学需要确认剩余优惠次数，粤海校区的同学可前往学生事务服务中心3号窗口查询，丽湖校区的同学可前往综合服务大厅2号窗口查询。"
 
-  utter_火车票优惠/身份证未核验:
+  utter_后勤服务/火车票优惠_身份证未核验:
     - text: "学生电子客票使用方式：（1）在一个优惠年度内（本年度10月1日至下年度9月30日），学生未绑定资质（核验），先在网上订票，乘车前必须先到车自动售/取票机（或站售票窗口）换票后，才能使用电子客票（刷身份证进站）进站乘车！（2）在一个优惠年度内（本年度10月1日至下年度9月30日），学生已在订票前到车站进行了绑定资质（核验），再去网上购票，可凭身份证直接进出站！"
 
-  utter_火车票优惠/取车票:
+  utter_后勤服务/火车票优惠_取车票:
     - text: "电子客票在车站自助售取票机上取票时点“互联网取票”通常只打印出来一张白色的信息单，不会出纸质车票，而点“取报销凭证”会直接打印出车票。学生在每学年第一次乘车时，必须换票。"
 
-  utter_火车票优惠/无法取票或绑定资质:
+  utter_后勤服务/火车票优惠_无法取票或绑定资质:
     - text: "据铁路客票实名制要求和统一规范，优惠卡内必须录入正确的个人信息（姓名、身份证号码、优惠区间等）。注意：区间必须是正确的站点名称！请带上学生证找到相关老师方可完成绑定（核验）和换票；需补办火车票优惠卡的学生凭学生证于12月3日--12月30日工作日内上午9:00—11:00、下午2：00—5：00，上述时间到指定地点办理（粤海校区：学生事务服务中心3号窗口，丽湖校区：综合服务大厅2号窗口）。"
 
-  utter_火车票优惠/查询学生资质绑定:
+  utter_后勤服务/火车票优惠_查询学生资质绑定:
     - text: "学生在车站绑定资质后，可以登陆“铁路12306”APP或铁路12306官方网站查询个人资质信息。"
 
-  utter_火车票优惠/其他:
-    - text: "建议同学关注“惠通学子”公众号，查询火车票学生票与优惠卡资质绑定的相关通知。如仍有疑问，同学可前往学生事务服务中心大厅咨询，办公电话：26535653。"
-
-  utter_心理咨询/谁可以使用:
+  utter_后勤服务/谁可以使用心理咨询:
     - text: "深圳大学在读本科生和研究生。"
 
-  utter_心理咨询/咨询方式:
+  utter_后勤服务/心理咨询方式:
     - text: "包括面对面咨询和线上QQ咨询两种形式，每次50分钟。原则上每位同学每学期至多可在中心接受 8 次咨询会谈。此外，我校与校外专业心理咨询机构合作，面向我校学生开通24小时心理咨询热线服务。咨询范围（包括但不限于以下问题）：情绪困扰、人际交往、亲子关系、学业压力、职业规划、恋爱/性困惑、成瘾问题和自我成长等。"
 
-  utter_心理咨询/隐私保护:
+  utter_后勤服务/心理咨询隐私保护:
     - text: "根据中国心理学会临床与咨询心理学工作伦理守则，心理咨询要严格遵守保密原则，未经来访者同意咨询师不得透露任何相关信息。但当同学或他人人身安全受到威胁，或应法律要求，咨询师才会酌情突破保密原则，以保障同学及他人的人身安全。心理中心严格遵守保密原则，来访者在咨询过程中所叙述的经历,体验,未经其本人同意,咨询师不得公布或传播这些信息。除非，当同学或他人身体安全受到威胁，心理咨询师才会视情况突破保密原则，以保障同学及他人的人身安全。"
 
-  utter_心理咨询/作用:
+  utter_后勤服务/心理咨询作用:
     - text: "心理咨询的服务对象是在学习、人际、情感等日常生活方面遇到困扰的正常群体。任何人在生活中遇到困惑、想要自我成长的时候都可以借助心理咨询的力量。心理咨询的优势在于会有一个专业的陪伴者跟你沟通、交流，共同成长。心理咨询并非精神障碍诊断与治疗，如涉及心理障碍或精神疾病，则需要专科就医，及时寻求医疗帮助。"
 
-  utter_心理咨询/地址:
+  utter_后勤服务/心理咨询地址:
     - text: "粤海校区：海滨游泳馆2-3楼、石头坞2楼
              丽湖校区：体育馆116-125"
 
-  utter_心理咨询/预约方式:
+  utter_后勤服务/心理咨询预约方式:
     - text: "校内心理咨询的预约方式：1）电话预约：26958879/26978022（粤海校区）、86930343（丽湖校区） 2）公众号预约：SZU心理健康教育与咨询中心-心理服务-预约咨询
              24小时心理咨询热线：拨打400-098-0708，转9，告知学校+学号，和咨询师进行沟通。"
 
-  utter_心理咨询/其他:
-    - text: "暂时不能回答该心理咨询问题。"
+  utter_后勤服务/其他:
+    - text: "暂时不能回答该问题。"
 
   utter_图书馆服务/推荐购买:
     - text: "荐购方法如下：
@@ -339,6 +347,9 @@ responses:
 
   utter_校园卡/自助挂失及解挂:
     - text: "关注微信公众号“深圳大学信息中心”→校园卡→校园卡业务→统一身份认证：输入校园卡号和密码（默认密码是身份证号码后8位）→挂失/解挂（自助）。"
+
+  utter_校园卡/领取微信校园卡:
+    - text: "[点击领取微信校园卡](https://weixiao.qq.com/apps/public/wxwork-cards/index.html?school_code=4144010590)"
 
   utter_校园卡/其他:
     - text: "暂时不能回答该校园卡相关问题。"
