--- a/data/nlu/teaching_affairs.yml
+++ b/data/nlu/teaching_affairs.yml
@@ -1,6 +1,6 @@
 version: "2.0"
 nlu:
-- intent: 选课问题/加位
+- intent: 教学教务/加位
   examples: |
     - 如果要加位的话我需要怎么做？
     - 如果要加位的话我需要怎么操作
@@ -17,7 +17,7 @@ nlu:
     - 大学英语全满了，没选上
     - 课程太热门，如何申请加位？
     - 课程热门如何申请加位
-- intent: 选课问题/预选课
+- intent: 教学教务/预选课
   examples: |
     - 预选阶段选中的课还在吗？能不能退？
     - 预选阶段中选的课还在吗？能不能退？
@@ -32,7 +32,7 @@ nlu:
     - 预选阶段的选课能退选不
     - 预选阶段选中的课怎么退选
     - 退选预选阶段选中的课
-- intent: 选课问题/切换选课校区
+- intent: 教学教务/切换选课校区
   examples: |
     - 我要选其他校区的课，如何切换选课校区？
     - 我要选其他校区的课，咋样切换选课校区？
@@ -47,7 +47,7 @@ nlu:
     - 如何选择其他校区的课程？
     - 如何选择其他校区的课程
     - 怎样选择其他校区的课程
-- intent: 选课问题/登录选课系统
+- intent: 教学教务/登录选课系统
   examples: |
     - 登录选课系统的用户名和密码是什么
     - 登录选课系统的用户名和密码是什么，忘记密码怎么办？
@@ -60,7 +60,10 @@ nlu:
     - 忘记登录选课系统的密码怎么办？
     - 登录选课系统的密码忘了，怎么办?
     - 忘记登录选课系统的密码
-- intent: 选课问题/网上补交学分费
+    - 怎么登陆选课系统
+    - 进入本科生选课系统
+    - 进入研究生选课系统
+- intent: 教学教务/网上补交学分费
   examples: |
     - 怎么在网上补交学分费？
     - 怎么在网上补交学分费
@@ -73,7 +76,7 @@ nlu:
     - 学生如何在网上补缴学分费？
     - 可以在网上补交学分费吗？
     - 可以在网上补交学分费？
-- intent: 选课问题/不能进入选课系统
+- intent: 教学教务/不能进入选课系统
   examples: |
     - 为什么不能进入选课系统？
     - 为什么不能进入选课系统
@@ -85,7 +88,12 @@ nlu:
     - 选课系统进不去
     - 选课系统进不去怎么办？
     - 选课系统进不去怎么办
-- intent: 选课问题/其他
+- intent: 教学教务/缴学杂费
+  examples: |
+    - 怎么缴学杂费
+    - 缴学杂费
+    - 补缴学杂费
+- intent: 教学教务/其他
   examples: |
     - 怎么选课？
     - 怎么选课
@@ -160,7 +168,7 @@ nlu:
     - 办事大厅的结业生选课系统打不开
     - 贷款的老生登陆本科生选课，显示未注册、未交费
     - 转专业后选课
-    - 关于经院双学位选课问题
+    - 关于经院双学位教学教务
     - 选课冲突
     - 请问什么时候开始预选课？
     - 选课人数低于多少课程会取消
