--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -163,13 +163,19 @@ nlu:
       - 怎么去图书馆勤工助学
       - 我想去图书馆勤工助学
 
+  - intent: 图书馆服务/开放时间
+    examples: |
+      - 图书馆开放时间
+      - 图书馆什么时候开放
+      - 图书馆什么时候开
+      - 图书馆什么时候开放
+      - 图书馆开得最晚的自习室是哪里，开到几点
+
+
   - intent: 图书馆服务/其他
     examples: |
       - 暑期图书馆开放时间
-      - 图书馆开放时间
       - 暑期图书馆什么时候开放
-      - 图书馆什么时候开
-      - 图书馆什么时候开放
       - 图书馆还书
       - 怎么还书
       - 还书
@@ -178,7 +184,6 @@ nlu:
       - 图书馆WiFi
       - 在图书馆无法连接校内网
       - 图书馆数据导出问题
-      - 图书馆开得最晚的自习室是哪里，开到几点
       - 南图书馆
       - 图书馆资源里的电子外文期刊
       - 如何申请查看图书馆监控
