--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -148,6 +148,49 @@ nlu:
       - 怎么看心理咨询？
       - 怎么样预约心理咨询
 
+  - intent: 后勤服务/宿舍_查询、申请及退宿
+    examples: |
+      - 新生宿舍查询
+      - 宿舍申请入住
+      - 申请调宿
+      - 跨校区调宿
+      - 退宿
+      - 怎么退宿？
+      - 休学退宿
+      - 关于第二批毕业生退宿的疑问
+      - 换宿舍
+      - 宿舍调换
+      - 调宿申请入口
+      - 旧阁老生调宿
+      - 调宿舍
+      - 调宿舍问题
+      - 宿舍对调
+      - 宿舍申请
+      - 调宿
+      - 关于调宿
+      - 调宿问题
+      - 个人调宿系统
+      - 空床位调宿
+      - 宿舍查询
+      - 调换宿舍的问题
+      - 换宿舍
+      - 宿舍空位查询
+      - 调宿舍
+      - 宿舍申请
+      - 想要申请调宿舍
+      - 调宿问题
+
+  - intent: 后勤服务/宿舍_电费查询与充值
+    examples: |
+      - 宿舍电费查询
+      - 宿舍电费充值
+      - 电费查询
+      - 怎么查电费
+      - 电费充值
+      - 怎么充值电费？
+      - 怎么充宿舍电费
+      - 微信端电费充值
+
 
   - intent: 后勤服务/其他
     examples: |
@@ -181,6 +224,68 @@ nlu:
       - 请问火车票学生优惠卡在丽湖校区哪里办理？
       - 心理咨询相关问题都有什么？
       - 心理咨询相关问题
+      - 请问西丽宿舍用电功率限制是怎么样的
+      - 经管法搬校区之后能否调宿舍？
+      - 关于搬宿舍的问题
+      - 关于本校本科生已录取研究生提前搬宿舍的问题
+      - 空调维修咨询
+      - 宿舍电费
+      - 调宿后的用电
+      - 什么时候可以开始换宿舍
+      - 宿舍床和桌子数量太多
+      - 宿舍
+      - 有关宿舍电费
+      - 宿舍用电24小时申请
+      - 关于粤海、沧海校区学生宿舍调整的问题
+      - 宿舍电费
+      - 宿舍拿东西
+      - 关于申请宿舍
+      - 丽湖宿舍缴费
+      - 本校升学宿舍调换
+      - 毕业后的宿舍杂物清理
+      - 转专业调宿
+      - 关于宿舍电费
+      - 斋区供水
+      - 关于毕业生返校搬宿舍的问题
+      - 宿舍强制熄灯
+      - 经管法搬过去后宿舍问题
+      - 2021级直博生住哪里
+      - 关于宿舍电器功率问题
+      - 新生入住
+      - 寒假留宿
+      - 电费充错到无人居住宿舍
+      - 宿舍排水障碍
+      - 下学期换宿舍的问题
+      - 新生宿舍何时能申请更换宿舍？
+      - 转专业之后的宿舍问题
+      - 换宿舍的电费问题（云杉轩）
+      - 本校硕士直升宿舍安排
+      - 红榴斋宿舍电器功率限制
+      - 内部网哪里可以查询到宿舍电费
+      - 关于宿舍
+      - 转专业后宿舍问题
+      - 关于宿舍床的尺寸
+      - 宿舍床摇动
+      - 宿舍饮水机
+      - 研究生宿舍安排
+      - 乔院宿舍楼下的冰箱
+      - 宿舍喧哗
+      - 宿舍公共卫生间
+      - 关于在哪里可以查询到搬宿舍的最终结果
+      - 新生会入住老生宿舍吗？
+      - 毕业生宿舍电费
+      - 宿舍用电
+      - 关于调宿系统
+      - 调宿系统
+      - 丽湖校区/西丽校区二期宿舍报修
+      - 空床位锁定、调宿、住宿
+      - 室友打鼾太厉害，严重影响睡眠怎么办？
+      - 申请调宿后要怎么确认？
+      - 宿舍椅子更换
+      - 請問宿舍的椅子壞了能換嗎？
+      - 宿舍电费
+      - 调宿后的用电
+      - 老生宿舍新生入住
 
 
   - synonym: 如何
