--- a/data/nlu/teaching_affairs.yml
+++ b/data/nlu/teaching_affairs.yml
@@ -93,6 +93,12 @@ nlu:
     - 怎么缴学杂费
     - 缴学杂费
     - 补缴学杂费
+- intent: 教学教务/百度文库
+  examples: |
+    - 怎么免费下载百度文库的资料
+    - 下载百度文库的资料
+    - 百度文库使用方法
+    - 百度文库（高校版）使用方法
 - intent: 教学教务/其他
   examples: |
     - 怎么选课？
