--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -27,6 +27,36 @@ rules:
       - intent: 校园卡
       - action: action_trigger_response_selector
 
+  - rule: 校医院
+    steps:
+      - intent: 校医院
+      - action: action_trigger_response_selector
+
+  - rule: 校园网服务
+    steps:
+      - intent: 校园网服务
+      - action: action_trigger_response_selector
+
+  - rule: 本科生招生
+    steps:
+      - intent: 本科生招生
+      - action: action_trigger_response_selector
+
+  - rule: 研究生招生
+    steps:
+      - intent: 研究生招生
+      - action: action_trigger_response_selector
+
+  - rule: 迎新服务
+    steps:
+      - intent: 迎新服务
+      - action: action_trigger_response_selector
+
+  - rule: 常用联系方式
+    steps:
+      - intent: 常用联系方式
+      - action: action_trigger_response_selector
+
   - rule: out of scope
     steps:
       - intent: out_of_scope
