删除二阶段回退，采用一阶段回退

--- a/data/nlu/campus_card.yml
+++ b/data/nlu/campus_card.yml
@@ -158,6 +158,8 @@ nlu:
 
 - intent: 校园卡/其他
   examples: |
+    - 校园卡相关问题
+    - 校园卡服务相关问题
     - 校园卡和通用代扣账户
     - 微信充值校园卡通用代扣账户是否能退
     - 新办理的学生卡
