--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -38,6 +38,7 @@ nlu:
 
   - intent: 研究生招生/其他
     examples: |
+      - 研究生招生相关问题
       - 研究生学业奖学金和优秀研究生干部奖学金什么时候发放呢
       - 研究生学业奖学金还有吗？
       - 研究生学业奖学金发放时间
