--- a/data/nlu/library.yml
+++ b/data/nlu/library.yml
@@ -174,6 +174,8 @@ nlu:
 
   - intent: 图书馆服务/其他
     examples: |
+      - 图书馆服务相关问题
+      - 图书馆相关问题
       - 暑期图书馆开放时间
       - 暑期图书馆什么时候开放
       - 图书馆还书
