--- a/data/nlu/logistics.yml
+++ b/data/nlu/logistics.yml
@@ -194,6 +194,8 @@ nlu:
 
   - intent: 后勤服务/其他
     examples: |
+      - 后勤服务相关问题
+      - 后勤相关问题
       - 与火车票优惠卡有关的疑问可以向谁询问吗？
       - 有关火车票优惠卡的疑问可以问谁？
       - 火车票优惠卡相关问题可以问谁？
