--- a/data/nlu/undergraduate_admission.yml
+++ b/data/nlu/undergraduate_admission.yml
@@ -56,6 +56,7 @@ nlu:
     examples: |
       - 考入深圳大学后可否转专业？
       - 深大可以转专业吗
+      - 可以转专业吗
 
   - intent: 本科生招生/宿舍环境、住宿条件和住宿费
     examples: |
@@ -86,4 +87,5 @@ nlu:
 
   - intent: 本科生招生/其他
     examples: |
+      - 本科生招生相关问题
       - 本科生校级奖学金发放时间
