--- a/data/rules/fallback.yml
+++ b/data/rules/fallback.yml
@@ -1,15 +1,13 @@
-version: "2.0"
-rules:
-  - rule: Activate two stage fallback
-    steps:
-      - intent: nlu_fallback
-      - action: action_two_stage_fallback
-      - active_loop: action_two_stage_fallback
-      
-  - rule: still dont understand after a full two stage fallback
-    condition:
-    - active_loop: action_two_stage_fallback
-    steps:
-      - action: action_two_stage_fallback
-      - active_loop: null
-      - action: utter_stilldontunderstand
+#version: "2.0"
+#rules:
+#  - rule: Single stage fallback
+#    steps:
+#      - intent: nlu_fallback
+#      - action: action_default_ask_affirmation
+#
+#  - rule: Single stage fallback | call default fallback if user is not ok
+#    steps:
+#      - action: action_default_ask_affirmation
+#      - intent: out_of_scope
+#      - action: action_trigger_response_selector
+
